--- a/ci.yml
+++ b/ci.yml
@@ -1,4 +1,4 @@
-name: Rust CI
+name: CI
 
 on:
   push:
@@ -6,34 +6,60 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  CARGO_TERM_COLOR: always
+  DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
- 
-   services:
+    services:
       postgres:
         image: postgres:14
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
-    
-    - uses: actions-rs/toolchain@v1
+
+    - name: Setup Rust
+      uses: actions-rs/toolchain@v1
       with:
-        profile: minimal
         toolchain: stable
+        profile: minimal
         override: true
-    
-    - name: Build
-      run: cargo build --verbose
-    
+
+    - name: Cache cargo registry
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libssl-dev pkg-config
+
+    - name: Setup PostgreSQL
+      run: |
+        sqlx migrate run --database-url $DATABASE_URL
+
     - name: Run tests
-      run: cargo test --verbose
-      env:
-        DATABASE_URL: "postgres://postgres:postgres@localhost:5432/postgres"
+      run: cargo test -- --nocapture
+      env
 
     
